# maat

./: .codedoc.yml  .gitignore  .goreleaser.yaml  .hermes.md  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  action.yml  go.mod  go.sum  pyproject.toml
.cursor/rules/: codedoc.mdc
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codedoc.yml  maat.yml  release.yml
.windsurf/rules/: codedoc.md
cmd/codedoc/: main.go
codedoc/: __init__.py  __main__.py  _yaml.py  check.py  cli.py  config.py  frontmatter.py  generate.py  init.py  model.py  scaffold.py  sync.py
docs/: index.md  llms.txt
docs/architecture/: overview.md
docs/decisions/: 0001-record-architecture-decisions.md  0002-zero-dependencies.md  0003-agents-md-source-of-truth.md  0004-related-code-staleness.md  0005-go-rewrite.md  0006-distribution-and-versioning.md  0010-templates-under-dot-maat.md  0011-build-time-go-dependencies.md  README.md
docs/guides/: deployment.md  development.md  testing.md  troubleshooting.md
docs/meta/: conventions.md  glossary.md  maintenance.md
docs/reference/: cli.md  configuration.md  environment.md  frontmatter.md
internal/codedoc/: check.go  cli.go  cli_test.go  config.go  frontmatter.go  generate.go  model.go  scaffold.go  sync.go  util.go  yaml.go
internal/maat/: cli.go  cli_test.go  scaffold.go  scaffold_test.go  semver_test.go  style.go  tty.go  util.go  (+2 more)
templates/: module.md
tests/: test_cli.py
(+13 files in other folders)
